# crymap

./: .gitignore  .travis.yml  2.0-DESIGN.org  CHANGELOG.md  COMPATIBILITY-NOTES.org  Cargo.toml  DESIGN.org  HISTORICAL-DESIGN.org  IMAP-SYNTAX.org  README.md  TODO.org  gen-readme.sh  readme-antelogue.md  readme-prologue.md  rustfmt.toml
book/: book.toml
book/src/: SUMMARY.md  encryption.md  imap.md  index.md  installation-guide.md  lmtp.md  smtp.md  user-guide.md
book/src/admin-guide/: backups.md  config.md  filesystem.md  index.md  migration.md  tuning.md  users.md
book/theme/css/: general.css
proptest-regressions/account/: mailbox_state.txt
proptest-regressions/crypt/: item_stream.txt
proptest-regressions/mime/: utf7.txt
proptest-regressions/smtp/inbound/: server.txt
proptest-regressions/support/: un64.txt
proptest-regressions/userbox/: mailbox_state.txt  model.txt
src/: file-preamble  main.rs
src/account/: account.rs  hier_id_scheme.rs  key_store.rs  mailbox_path.rs  mailbox_state.rs  message_format.rs  mod.rs  model.rs  recency_token.rs  search_backend.rs
src/account/mailbox/: change_tx.rs  defs.rs  expunge.rs  fetch.rs  flags.rs  idle.rs  messages.rs  mod.rs  poll.rs  search.rs  search_backend.rs  select.rs  zstd_train.rs
src/account/v1/: account.rs  hier_id_scheme.rs  mailbox_path.rs  mailbox_state.rs  mod.rs  model.rs  recency_token.rs
src/account/v1/mailbox/: change_tx.rs  defs.rs  expunge.rs  fetch.rs  flags.rs  idle.rs  messages.rs  mod.rs  poll.rs  search.rs  select.rs  zstd_train.rs
src/account/v2/: mod.rs
src/account/v2/state/: defs.rs  delivery.rs  expunge.rs  fetch.rs  flags.rs  idle.rs  init.rs  mailboxes.rs  maintenance.rs  messages.rs  migration.rs  mod.rs  poll.rs  search.rs  select.rs  spool.rs  user_config.rs  zstd_train.rs
src/account/v2/storage/: db_migrations.rs  deliverydb.rs  deliverydb.v1.sql  messages.rs  metadb.rs  metadb.v1.sql  mod.rs  sqlite_xex_vfs.rs  types.rs
src/cli/: deliver.rs  imap_test.rs  main.rs  mod.rs  remote.rs  sanity.rs  serve.rs  user.rs
src/crypt/: data_stream.rs  item_stream.rs  master_key.rs  mod.rs  naked.rs  test_keys.rs  xex.rs
src/imap/: client.rs  command_processor.rs  lex.rs  literal_source.rs  mailbox_name.rs  mod.rs  request_reader.rs  response_writer.rs  server.rs  syntax-macros.rs  syntax.rs
src/imap/command_processor/: auth.rs  commands.rs  defs.rs  fetch.rs  flags.rs  mailboxes.rs  messages.rs  mod.rs  search.rs  smtp_out.rs  user_config.rs
src/imap/integration_tests/: defs.rs  imap4rev2.rs  mod.rs  rfc2177.rs  rfc2342.rs  rfc2971.rs  rfc3348.rs  rfc3502.rs  rfc3516.rs  rfc3691.rs  rfc4315.rs  rfc4731.rs  rfc4959.rs  rfc4978.rs  rfc5161.rs  rfc5182.rs  rfc5258.rs  rfc5819.rs  rfc6154.rs  rfc6851.rs  rfc6855.rs  rfc7888.rs  rfc8438.rs  rfc8474.rs  rfc8514.rs  xcry.rs  ximap4rev2.rs  xlist.rs
src/imap/integration_tests/rfc3501/: auth.rs  bad_commands.rs  fetch.rs  first_contact.rs  flags.rs  literal.rs  mailboxes.rs  messages.rs  mod.rs  search.rs  select.rs
src/imap/integration_tests/rfc7162/: bad.rs  condstore_basics.rs  condstore_enable.rs  condstore_fetch.rs  condstore_flags.rs  condstore_search.rs  condstore_status.rs  mod.rs  qresync.rs
src/lmtp/: codes.rs  integration_tests.rs  mod.rs  server.rs  syntax.rs
src/mime/: address-list-corpus-jlingle.txt  content_encoding.rs  date-corpus-jlingle.txt  dkim.rs  encoded_word.rs  grovel.rs  header.rs  mod.rs  model.rs  quoted_printable.rs  utf7.rs
src/mime/dkim/: canonicalisation.rs  error.rs  hash.rs  header.rs  mod.rs  sign.rs  test_domain_keys.rs  verify.rs
src/mime/fetch/: addressing.rs  bodystructure.rs  envelope.rs  mod.rs  multi.rs  rfc3501_p56.eml  search.rs  section.rs  simple.rs  strings.rs  zstd_train.rs
src/smtp/: codes.rs  inbound.rs  integration_tests.rs  mod.rs  syntax.rs
src/smtp/dmarc/: mod.rs  psl.rs  psl.txt  syntax.rs
src/smtp/inbound/: bridge.rs  delivery.rs  integration_test_common.rs  lmtp.rs  lmtp_integration_tests.rs  mod.rs  server.rs  smtpin.rs  smtpin_integration_tests.rs  smtpsub.rs  smtpsub_integration_tests.rs
src/smtp/outbound/: mod.rs  send.rs  serverseq.rs  transact.rs  transcript.rs
src/smtp/spf/: driver.rs  eval.rs  mod.rs  syntax.rs
src/support/: append_limit.rs  async_io.rs  buffer.rs  chronox.rs  compression.rs  diagnostic.rs  dns.rs  error.rs  file_ops.rs  log_prefix.rs  mailbox_paths.rs  mod.rs  rcio.rs  safe_name.rs  small_bitset.rs  sysexits.rs  system_config.rs  threading.rs  un64.rs  unix_privileges.rs  user_config.rs
src/test_data/: christmas-tree.eml  dkim-amazoncojp-2x-rsa-sha256.eml  dkim-lingl-rsa-sha1.eml  dkim-yahoo-rsa-sha256.eml  dovecot-prefer-standalone-daemons.eml  enron_dasovich-j_all_documents_11634.eml  enron_dasovich-j_notes_inbox_3944.eml  enron_farmer-d_all_documents_3128.eml  enron_farmer-d_discussion_threads_4965.eml  enron_farmer-d_entex_1.eml  enron_farmer-d_entex_106.eml  enron_keavey-p_deleted_items_127.eml  enron_keavey-p_deleted_items_144.eml  enron_keavey-p_deleted_items_163.eml  enron_keavey-p_deleted_items_21.eml  enron_keavey-p_deleted_items_258.eml  enron_keavey-p_deleted_items_269.eml  enron_keavey-p_deleted_items_314.eml  enron_keavey-p_deleted_items_55.eml  enron_keavey-p_deleted_items_6.eml  enron_keavey-p_deleted_items_63.eml  enron_keavey-p_deleted_items_82.eml  enron_keavey-p_inbox_551.eml  enron_scholtes-d_transmission_29.eml  enron_scholtes-d_transmission_35.eml  mod.rs  multi-part-base64.eml  rfc-8463.eml  rfc3501_p56.eml  single-part-base64.eml  torture-test.eml  unknown-cte.eml  with-obsolete-routing.eml
src/userbox/: flag_store.rs  key_store.rs  mailbox.rs  mailbox2.rs  mailbox_path.rs  mailbox_state.rs  message_store.rs  mod.rs  model.rs
src/userbox/mailbox/: change_tx.rs  defs.rs  expunge.rs  flags.rs  messages.rs  mod.rs  poll.rs  select.rs
