[package]
name = "crymap"
version = "0.1.0"
authors = ["Jason Lingle <jason@lin.gl>"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
base64 = "0.12"
bitflags = "1.2"
byteorder = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "2.33", default-features = false }
encoding_rs = "0.8"
flate2 = "1.0"
lazy_static = "1.4"
log = "0.4.8"
memchr = "2.3"
nix = "0.17"
nom = { version = "5.1", default-features = false, features = ["regexp", "std"] }
openssl = "0.10.29"
rand = "0.7"
regex = "1.3"
rpassword = "4.0"
rayon = "1.3"
rust-argon2 = "0.8"
secstr = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_repr = "0.1"
structopt = { version = "0.3.15", default-features = false }
syslog = "5.0"
tempfile = "3.1"
thiserror = "1.0"
tiny-keccak = { version = "2.0", features = ["sha3", "kmac"] }
toml = "0.5"
zstd = "0.5"

[dependencies.log4rs]
version = "0.13"
default-features = false
features = [
  "console_appender",
  "file_appender",
  "rolling_file_appender",
  "compound_policy",
  "delete_roller",
  "fixed_window_roller",
  "size_trigger",
  "threshold_filter",
  "toml_format",
  "file",
]

[dev-dependencies]
os_pipe = "0.9"
proptest = "0.10"

# rust-argon2 and openssl can be quite slow without optimisations. We don't
# need to debug them, so optimise even in dev/test builds.
[profile.dev.package.rust-argon2]
opt-level = 3

[profile.dev.package.openssl]
opt-level = 3
